[package]
name = "joystick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.10.1"
freya = { git = "https://github.com/marc2332/freya", features = ["x11"]}
tokio = { version = "1.22.0", features = ["rt"] }
io_bluetooth = "0.1.0"
